# render-4d-rs-OBSOLETE

./: Cargo.toml  Implementation.md  README.md
src/: facet.rs  lib.rs  mesh.rs  texture.rs  triangle.rs
