[package]
name = "render-4d"
version = "0.0.0"
authors = ["finegeometer <finegeometer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nalgebra = "0.18"
alga = { version = "0.9", default-features = false }
num-traits = { version = "0.2", default-features = false }

polygon3 = { git = "https://github.com/finegeometer/polygon3-rs" }
